modified:   dataloader.py

--- a/dataloader.ipynb
+++ b/dataloader.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "66615fd9",
    "metadata": {},
    "outputs": [],
@@ -270,9 +270,7 @@
     "        df_normalized, data_min, data_max, scaler = self.normalizer.process(df)\n",
     "        X, y = self.sequence_creator.create_sequences(df_normalized)\n",
     "        X_train, X_test, y_train, y_test = self.splitter.process(X, y)\n",
-    "        return X_train, X_test, y_train, y_test, data_min, data_max, scaler\n",
-    "\n",
-    "\n"
+    "        return X_train, X_test, y_train, y_test, data_min, data_max, scaler\n"
    ]
   },
   {
