--- a/lstm.ipynb
+++ b/lstm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "df586047",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,9 @@
     "from dataloader import load_dataset, get_cryptoquant_data, combineTA_to_OHLCV\n",
     "from sklearn.metrics import r2_score\n",
     "import torch.nn as nn\n",
-    "from tqdm.auto import tqdm"
+    "from tqdm.auto import tqdm\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -540,9 +542,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
     "def plot_predictions(true_vals, predicted_vals, title='Prediction vs Actual', feature_idx=0, dataset_type='Train'):\n",
     "    plt.figure(figsize=(12, 5))\n",
     "    plt.plot(true_vals[:, feature_idx], label='True', color='blue')\n",
