--- a/signal_regen.ipynb
+++ b/signal_regen.ipynb
@@ -36,34 +36,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class SignalRegen(ISignalGeneration):\n",
     "    def strategic(self, data):\n",
-    "        # --- RSI (14-period) ---\n",
+    "        # RSI (14-period)\n",
     "        rsi = RSIIndicator(close=data['close'], window=14)\n",
     "        data['rsi'] = rsi.rsi()\n",
     "\n",
-    "        # --- Stochastic Oscillator (14,3,3) ---\n",
+    "        # Stochastic Oscillator (14,3,3)\n",
     "        stoch = StochasticOscillator(high=data['high'], low=data['low'], close=data['close'], window=14, smooth_window=3)\n",
     "        data['stoch_k'] = stoch.stoch()\n",
     "        data['stoch_d'] = stoch.stoch_signal()\n",
     "\n",
-    "        # --- MACD (12,26,9) ---\n",
+    "        # MACD (12,26,9)\n",
     "        macd = MACD(close=data['close'], window_slow=26, window_fast=12, window_sign=9)\n",
     "        data['macd'] = macd.macd()\n",
     "        data['macd_signal'] = macd.macd_signal()\n",
     "        data['macd_hist'] = macd.macd_diff()\n",
     "\n",
-    "        # --- Bollinger Bands (20,2) ---\n",
+    "        # Bollinger Bands (20,2)\n",
     "        bb = BollingerBands(close=data['close'], window=20, window_dev=2)\n",
     "        data['bb_upper'] = bb.bollinger_hband()\n",
     "        data['bb_lower'] = bb.bollinger_lband()\n",
     "        data['bb_middle'] = bb.bollinger_mavg()\n",
     "\n",
-    "        # --- Momentum (10-period Rate of Change) ---\n",
+    "        # Momentum (10-period Rate of Change)\n",
     "        momentum = ROCIndicator(close=data['close'], window=10)\n",
     "        data['momentum'] = momentum.roc()\n",
     "\n",
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6205ab18",
    "metadata": {},
    "outputs": [
@@ -337,13 +337,13 @@
    "source": [
     "plt.figure(figsize=(14, 7))\n",
     "\n",
+    "# Plot price line (first 720 hours)\n",
     "plot_data = data.iloc[:720]\n",
     "\n",
-    "# Plot price line (first 360 days)\n",
     "plt.plot(plot_data.index, plot_data['close'], \n",
     "         label='Price', color='blue', alpha=0.8)\n",
     "\n",
-    "# Buy signals (green arrows)\n",
+    "# Buy signals\n",
     "plt.scatter(\n",
     "    plot_data[plot_data['final_signal'] == 1].index,\n",
     "    plot_data[plot_data['final_signal'] == 1]['close'],\n",
@@ -353,7 +353,7 @@
     "    label='Buy Signal'\n",
     ")\n",
     "\n",
-    "# Sell signals (red arrows)\n",
+    "# Sell signals\n",
     "plt.scatter(\n",
     "    plot_data[plot_data['final_signal'] == -1].index,\n",
     "    plot_data[plot_data['final_signal'] == -1]['close'],\n",
@@ -368,7 +368,7 @@
     "plt.ylabel('Price')\n",
     "plt.legend(loc='upper left')\n",
     "plt.grid(alpha=0.3)\n",
-    "plt.tight_layout()  # Prevent label cutoff\n",
+    "plt.tight_layout() \n",
     "plt.show()"
    ]
   },
