--- a/dataloader.ipynb
+++ b/dataloader.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b64dd29f",
    "metadata": {},
    "outputs": [],
@@ -71,15 +71,12 @@
     "        response.raise_for_status()\n",
     "        data = response.json().get(\"data\", [])\n",
     "\n",
-    "        # Use flatten if nested JSON\n",
     "        df = pd.json_normalize(data) if self.flatten_json else pd.DataFrame(data)\n",
     "\n",
-    "        # Add datetime index\n",
     "        df['datetime'] = pd.to_datetime(df['start_time'], unit='ms')\n",
     "        df.set_index('datetime', inplace=True)\n",
     "        df.drop(columns=['start_time'], inplace=True)\n",
     "\n",
-    "        # Rename if required\n",
     "        df.rename(columns=self.rename_columns, inplace=True)\n",
     "\n",
     "        return df\n"
@@ -199,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3e1c502d",
    "metadata": {},
    "outputs": [],
@@ -213,9 +210,7 @@
     "        for i in range(len(df) - self.lookback):\n",
     "            X.append(df.iloc[i:i + self.lookback].values)  # [lookback, features]\n",
     "            y.append(df.iloc[i + self.lookback].values)    # [features]\n",
-    "        return np.array(X), np.array(y)  # X: [samples, lookback, features], y: [samples, features]\n",
-    "\n",
-    "\n"
+    "        return np.array(X), np.array(y)  # X: [samples, lookback, features], y: [samples, features]\n"
    ]
   },
   {
