--- a/lstm.ipynb
+++ b/lstm.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ebdea0b8",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,6 @@
     "        # Output layer: now outputs 8 features\n",
     "        self.fc = nn.Sequential(\n",
     "            nn.Linear(hidden_size, input_size),  # output 8 features\n",
-    "            # nn.Sigmoid()  # Uncomment this ONLY if you want outputs in range [0, 1]\n",
     "        )\n",
     "\n",
     "        self.dropout = nn.Dropout(dropout_prob)\n",
@@ -185,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0928f29f",
    "metadata": {},
    "outputs": [],
@@ -202,19 +201,7 @@
     "    lookback: int,\n",
     "    device: torch.device\n",
     ") -> torch.Tensor:\n",
-    "    \"\"\"\n",
-    "    Recursively forecasts future multi-feature values using the trained LSTM model.\n",
-    "\n",
-    "    Args:\n",
-    "        model: Trained LSTM model\n",
-    "        initial_input: Tensor of shape [1, lookback, num_features]\n",
-    "        forecast_steps: Number of future steps to predict\n",
-    "        lookback: Length of input window\n",
-    "        device: CPU or CUDA\n",
-    "\n",
-    "    Returns:\n",
-    "        forecast: Tensor of shape [forecast_steps, output_dim]\n",
-    "    \"\"\"\n",
+    "    \n",
     "    model.eval()\n",
     "    forecast = []\n",
     "\n",
@@ -238,18 +225,7 @@
     "    loss_fn: torch.nn.Module,\n",
     "    metrics_fn: Callable[[torch.Tensor, torch.Tensor], float] = None\n",
     ") -> Tuple[float, float]:\n",
-    "    \"\"\"\n",
-    "    Compares forecast with ground truth and computes evaluation metrics.\n",
-    "\n",
-    "    Args:\n",
-    "        forecast: Tensor of predicted values [forecast_steps, output_dim]\n",
-    "        ground_truth: Tensor of true values [forecast_steps, output_dim]\n",
-    "        loss_fn: Loss function (e.g. MSE)\n",
-    "        metrics_fn: Optional function to compute additional metrics like R^2\n",
-    "\n",
-    "    Returns:\n",
-    "        loss_value, metrics_value\n",
-    "    \"\"\"\n",
+    "    \n",
     "    loss_value = loss_fn(forecast, ground_truth).item()\n",
     "    metrics_value = metrics_fn(forecast, ground_truth).item() if metrics_fn else None\n",
     "    return loss_value, metrics_value\n",
@@ -459,22 +435,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b3389db0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def denormalize(data, scaler: MinMaxScaler) -> np.ndarray:\n",
-    "    \"\"\"\n",
-    "    Denormalizes data using the given scaler.\n",
-    "\n",
-    "    Args:\n",
-    "        data (torch.Tensor or np.ndarray): Normalized data\n",
-    "        scaler (MinMaxScaler): Scaler used during normalization\n",
-    "\n",
-    "    Returns:\n",
-    "        np.ndarray: Denormalized data\n",
-    "    \"\"\"\n",
+    "    \n",
     "    if isinstance(data, torch.Tensor):\n",
     "        data = data.detach().cpu().numpy()\n",
     "    return scaler.inverse_transform(data)\n",
@@ -498,121 +465,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a64aac59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from skopt import gp_minimize\n",
-    "# from skopt.space import Integer, Categorical\n",
-    "# import torch.optim as optim\n",
-    "# from torch.utils.data import DataLoader, TensorDataset\n",
+    "from skopt import gp_minimize\n",
+    "from skopt.space import Integer, Categorical\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
     "\n",
-    "# # Define the objective function for Bayesian Optimization\n",
-    "# def objective(params):\n",
-    "#     # Extract parameters\n",
-    "#     num_layers = int(params[0])\n",
-    "#     hidden_size = int(params[1])\n",
-    "#     lookback = int(params[2])\n",
-    "#     num_epochs = int(params[3])\n",
-    "#     optimizer_name = params[4]\n",
+    "# Define the objective function for Bayesian Optimization\n",
+    "def objective(params):\n",
+    "    # Extract parameters\n",
+    "    num_layers = int(params[0])\n",
+    "    hidden_size = int(params[1])\n",
+    "    lookback = int(params[2])\n",
+    "    num_epochs = int(params[3])\n",
+    "    optimizer_name = params[4]\n",
     "\n",
-    "#     X_train_t = torch.FloatTensor(X_train_tensor)\n",
-    "#     y_train_t = torch.FloatTensor(y_train_tensor)\n",
-    "#     X_test_t = torch.FloatTensor(X_test_tensor)\n",
-    "#     y_test_t = torch.FloatTensor(y_test_tensor)\n",
+    "    X_train_t = torch.FloatTensor(X_train_tensor)\n",
+    "    y_train_t = torch.FloatTensor(y_train_tensor)\n",
+    "    X_test_t = torch.FloatTensor(X_test_tensor)\n",
+    "    y_test_t = torch.FloatTensor(y_test_tensor)\n",
     "    \n",
-    "#     # Model initialization\n",
-    "#     model = AttentionLSTM(\n",
-    "#         input_size=8,\n",
-    "#         hidden_size=hidden_size,\n",
-    "#         num_layers=num_layers,\n",
-    "#         dropout_prob=0.2  # Fixed dropout\n",
-    "#     ).to(device)\n",
+    "    # Model initialization\n",
+    "    model = AttentionLSTM(\n",
+    "        input_size=8,\n",
+    "        hidden_size=hidden_size,\n",
+    "        num_layers=num_layers,\n",
+    "        dropout_prob=0.2  # Fixed dropout\n",
+    "    ).to(device)\n",
     "    \n",
-    "#     # Optimizer selection\n",
-    "#     if optimizer_name == 'adam':\n",
-    "#         optimizer = optim.Adam(model.parameters())\n",
-    "#     elif optimizer_name == 'rmsprop':\n",
-    "#         optimizer = optim.RMSprop(model.parameters())\n",
+    "    # Optimizer selection\n",
+    "    if optimizer_name == 'adam':\n",
+    "        optimizer = optim.Adam(model.parameters())\n",
+    "    elif optimizer_name == 'rmsprop':\n",
+    "        optimizer = optim.RMSprop(model.parameters())\n",
     "    \n",
-    "#     # Training loop (limited epochs for optimization)\n",
-    "#     model.train()\n",
-    "#     batch_size_bo = 32\n",
-    "#     num_epochs = num_epochs\n",
-    "#     for epoch in range(num_epochs):  # Reduced epochs for faster optimization\n",
-    "#         for i in range(0, len(X_train_t), batch_size_bo):\n",
-    "#             inputs = X_train_t[i:i+batch_size_bo].to(device)\n",
-    "#             labels = y_train_t[i:i+batch_size_bo].to(device)\n",
+    "    # Training loop (limited epochs for optimization)\n",
+    "    model.train()\n",
+    "    batch_size_bo = 32\n",
+    "    num_epochs = num_epochs\n",
+    "    for epoch in range(num_epochs):  # Reduced epochs for faster optimization\n",
+    "        for i in range(0, len(X_train_t), batch_size_bo):\n",
+    "            inputs = X_train_t[i:i+batch_size_bo].to(device)\n",
+    "            labels = y_train_t[i:i+batch_size_bo].to(device)\n",
     "\n",
-    "#             # Zero the gradients\n",
-    "#             optimizer.zero_grad()\n",
+    "            # Zero the gradients\n",
+    "            optimizer.zero_grad()\n",
     "\n",
-    "#             # Forward pass\n",
-    "#             outputs = model(inputs)\n",
-    "#             loss = loss_fn(outputs, labels)\n",
+    "            # Forward pass\n",
+    "            outputs = model(inputs)\n",
+    "            loss = loss_fn(outputs, labels)\n",
     "\n",
-    "#             # Backward pass and optimization\n",
-    "#             loss.backward()\n",
-    "#             optimizer.step()\n",
+    "            # Backward pass and optimization\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
     "    \n",
-    "#     # Validation\n",
-    "#     model.eval()\n",
-    "#     with torch.no_grad():\n",
-    "#         test_preds = recursive_forecast(\n",
-    "#             model, \n",
-    "#             X_test_t[0:1],  # Initial sequence\n",
-    "#             len(X_test_t),\n",
-    "#             lookback,\n",
-    "#             device\n",
-    "#         )\n",
-    "#         val_loss = nn.MSELoss()(test_preds, y_test_t).item()\n",
+    "    # Validation\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        test_preds = recursive_forecast(\n",
+    "            model, \n",
+    "            X_test_t[0:1],  # Initial sequence\n",
+    "            len(X_test_t),\n",
+    "            lookback,\n",
+    "            device\n",
+    "        )\n",
+    "        val_loss = nn.MSELoss()(test_preds, y_test_t).item()\n",
     "    \n",
-    "#     return val_loss"
+    "    return val_loss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "b1b16125",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Define search space\n",
-    "# param_space = [\n",
-    "#     Integer(1, 3, name='num_layers'),          # LSTM layers\n",
-    "#     Integer(32, 256, name='hidden_size'),      # Hidden units\n",
-    "#     Integer(60, 90, name='lookback'),          # Sequence length\n",
-    "#     Integer(100, 400, name='batch_size'),       # Batch size\n",
-    "#     Categorical(['adam', 'rmsprop'], name='optimizer')  # Optimizer\n",
-    "# ]"
+    "# Define search space\n",
+    "param_space = [\n",
+    "    Integer(1, 3, name='num_layers'),          # LSTM layers\n",
+    "    Integer(32, 256, name='hidden_size'),      # Hidden units\n",
+    "    Integer(60, 90, name='lookback'),          # Sequence length\n",
+    "    Integer(100, 400, name='batch_size'),       # Batch size\n",
+    "    Categorical(['adam', 'rmsprop'], name='optimizer')  # Optimizer\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "807783ba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Run optimization\n",
-    "# res = gp_minimize(\n",
-    "#     objective,\n",
-    "#     param_space,\n",
-    "#     n_calls=20,               # Reduced from 30\n",
-    "#     random_state=42,\n",
-    "#     verbose=True,\n",
-    "#     n_jobs=-1                # Parallel processing\n",
-    "# )\n",
+    "# Run optimization\n",
+    "res = gp_minimize(\n",
+    "    objective,\n",
+    "    param_space,\n",
+    "    n_calls=20,       \n",
+    "    random_state=42,\n",
+    "    verbose=True,\n",
+    "    n_jobs=-1           \n",
+    ")\n",
     "\n",
-    "# # Best parameters\n",
-    "# print(f\"Best parameters: {res.x}\")\n",
-    "# print(f\"Best validation MSE: {res.fun}\")"
+    "# Best parameters\n",
+    "print(f\"Best parameters: {res.x}\")\n",
+    "print(f\"Best validation MSE: {res.fun}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "bf9dabd4",
    "metadata": {},
    "outputs": [
@@ -652,7 +619,6 @@
     "    plt.grid(True)\n",
     "    plt.show()\n",
     "\n",
-    "# Example: Plot for 'close' price (assuming it's feature 0)\n",
     "plot_predictions(y_train_true_denorm, y_train_pred_denorm, dataset_type='Train', feature_idx=0)\n",
     "plot_predictions(y_test_true_denorm, y_test_pred_denorm, dataset_type='Test', feature_idx=0)\n"
    ]
@@ -738,30 +704,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "945d1a94",
    "metadata": {},
    "outputs": [],
    "source": [
     "class SignalRegen(ISignalGeneration):\n",
     "    def strategic(self, data):\n",
-    "        # --- RSI (14-period) ---\n",
+    "        # RSI (14-period) \n",
     "        rsi = RSIIndicator(close=data['close'], window=14)\n",
     "        data['rsi'] = rsi.rsi()\n",
     "\n",
-    "        # --- MACD (12,26,9) ---\n",
+    "        # MACD (12,26,9) \n",
     "        macd = MACD(close=data['close'], window_slow=26, window_fast=12, window_sign=9)\n",
     "        data['macd'] = macd.macd()\n",
     "        data['macd_signal'] = macd.macd_signal()\n",
     "        data['macd_hist'] = macd.macd_diff()\n",
     "\n",
-    "        # --- Bollinger Bands (20,2) ---\n",
+    "        # Bollinger Bands (20,2) \n",
     "        bb = BollingerBands(close=data['close'], window=20, window_dev=2)\n",
     "        data['bb_upper'] = bb.bollinger_hband()\n",
     "        data['bb_lower'] = bb.bollinger_lband()\n",
     "        data['bb_middle'] = bb.bollinger_mavg()\n",
     "\n",
-    "        # --- Momentum (10-period Rate of Change) ---\n",
+    "        # Momentum (10-period Rate of Change)\n",
     "        momentum = ROCIndicator(close=data['close'], window=10)\n",
     "        data['momentum'] = momentum.roc()\n",
     "\n",
@@ -833,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "d29120aa",
    "metadata": {},
    "outputs": [
@@ -921,7 +887,6 @@
     }
    ],
    "source": [
-    "# Assuming prediction_data and truevalue_data are pandas DataFrames\n",
     "for data in [prediction_data, truevalue_data]:\n",
     "    # RSI signal\n",
     "    data['rsi_signal'] = 0\n",
@@ -943,7 +908,6 @@
     "    data.loc[data['momentum'] > 0, 'momentum_signal'] = 1  # Buy if momentum is positive\n",
     "    data.loc[data['momentum'] < 0, 'momentum_signal'] = -1\n",
     "\n",
-    "    # Optionally, print the head of each data to check results\n",
     "    print(data.head(10))\n"
    ]
   },
@@ -1003,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "74964c83",
    "metadata": {},
    "outputs": [
@@ -1032,13 +996,13 @@
     "for data in [prediction_data, truevalue_data]:\n",
     "    plt.figure(figsize=(14, 7))\n",
     "\n",
+    "    # Plot price line (first 720 hours)\n",
     "    plot_data = data.iloc[:720]\n",
     "\n",
-    "    # Plot price line (first 360 days)\n",
     "    plt.plot(plot_data.index, plot_data['close'], \n",
     "            label='Price', color='blue', alpha=0.8)\n",
     "\n",
-    "    # Buy signals (green arrows)\n",
+    "    # Buy signals\n",
     "    plt.scatter(\n",
     "        plot_data[plot_data['final_signal'] == 1].index,\n",
     "        plot_data[plot_data['final_signal'] == 1]['close'],\n",
@@ -1048,7 +1012,7 @@
     "        label='Buy Signal'\n",
     "    )\n",
     "\n",
-    "    # Sell signals (red arrows)\n",
+    "    # Sell signals\n",
     "    plt.scatter(\n",
     "        plot_data[plot_data['final_signal'] == -1].index,\n",
     "        plot_data[plot_data['final_signal'] == -1]['close'],\n",
@@ -1063,7 +1027,7 @@
     "    plt.ylabel('Price')\n",
     "    plt.legend(loc='upper left')\n",
     "    plt.grid(alpha=0.3)\n",
-    "    plt.tight_layout()  # Prevent label cutoff\n",
+    "    plt.tight_layout() \n",
     "    plt.show()"
    ]
   },
